New Method findNextNotification produces "delta" notifications

--- a/src/main/webapp/app/scripts/menu/menu.html
+++ b/src/main/webapp/app/scripts/menu/menu.html
@@ -15,7 +15,7 @@
 
 	<ion-side-menu side="left">
 		<ion-header-bar class="bar-stable">
-			<h1 class="title">Left</h1>
+			<h1 class="title">Menu</h1>
 		</ion-header-bar>
 		<ion-content>
 			<ion-list>
@@ -23,30 +23,48 @@
 					<i class="icon ion-ios-home"></i>
 					Home
 				</ion-item>
-				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/popover-menu">
-					<i class="icon ion-ios-arrow-down"></i>
-					PopOver menu
+			</ion-list>
+			<ion-list>
+				<ion-item nav-clear class="item-icon-left">
+					<i class="icon ion-ios-bell"></i>
+					Notification
 				</ion-item>
+			</ion-list>
+			<ion-list>
+				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/popover-menu">-->
+				<!--<i class="icon ion-ios-arrow-down"></i>-->
+				<!--Notification menu-->
+				<!--<ion-list>-->
 				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/wordpress-articles">
-					<i class="icon ion-social-wordpress"></i>
-					Wordpress
+					<i class="ion-email-unread"></i>
+					Inbox
 				</ion-item>
 				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/elements">
-					<i class="icon ion-android-checkbox-outline"></i>
-					Elements
+					<i class="ion-filing"></i>
+					History
 				</ion-item>
-				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/native-scrolling">
-					<i class="icon ion-ios-list-outline"></i>
-					Native scrolling
-				</ion-item>
-				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/new-slide-box">
-					<i class="icon ion-arrow-swap"></i>
-					New slide box
-				</ion-item>
-				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/map">
-				<i class="icon ion-map"></i>
-					Map
-				</ion-item>
+				<!--</ion-list>-->
+				<!--</ion-item>-->
+				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/wordpress-articles">-->
+				<!--<i class="icon ion-social-wordpress"></i>-->
+				<!--Wordpress-->
+				<!--</ion-item>-->
+				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/elements">-->
+				<!--<i class="icon ion-android-checkbox-outline"></i>-->
+				<!--Elements-->
+				<!--</ion-item>-->
+				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/native-scrolling">-->
+				<!--<i class="icon ion-ios-list-outline"></i>-->
+				<!--Native scrolling-->
+				<!--</ion-item>-->
+				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/new-slide-box">-->
+				<!--<i class="icon ion-arrow-swap"></i>-->
+				<!--New slide box-->
+				<!--</ion-item>-->
+				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/map">-->
+				<!--<i class="icon ion-map"></i>-->
+				<!--Map-->
+				<!--</ion-item>-->
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
