Home html and History.html

--- a/src/main/webapp/app/scripts/menu/menu.html
+++ b/src/main/webapp/app/scripts/menu/menu.html
@@ -39,7 +39,7 @@
 					<i class="ion-email-unread"></i>
 					Inbox
 				</ion-item>
-				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/elements">
+				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/history">
 					<i class="ion-filing"></i>
 					History
 				</ion-item>
@@ -49,7 +49,7 @@
 				<!--<i class="icon ion-social-wordpress"></i>-->
 				<!--Wordpress-->
 				<!--</ion-item>-->
-				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/elements">-->
+				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/history">-->
 				<!--<i class="icon ion-android-checkbox-outline"></i>-->
 				<!--Elements-->
 				<!--</ion-item>-->
