--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -38,6 +38,9 @@
 	<script src="bower_components/angularfire/dist/angularfire.js"></script>
 	<script src="bower_components/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.js"></script>
 	<script src="bower_components/ng-cordova-oauth/dist/ng-cordova-oauth.js"></script>
+	<script src="bower_components/stomp-websocket/lib/stomp.min.js"></script>
+	<script src="bower_components/sockjs-client/dist/sockjs.js"></script>
+	<script src="bower_components/angular-sockjs/src/index.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
