WebSocket first attempt to integrate.

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -41,6 +41,7 @@
 	<script src="bower_components/stomp-websocket/lib/stomp.min.js"></script>
 	<script src="bower_components/sockjs-client/dist/sockjs.js"></script>
 	<script src="bower_components/angular-sockjs/src/index.js"></script>
+	<script src="bower_components/hashmap/hashmap.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
