--- a/src/main/webapp/app/scripts/home/home.html
+++ b/src/main/webapp/app/scripts/home/home.html
@@ -16,8 +16,8 @@
 			<div class="row">
 				<div class="card col home">
 					<!--<a class="item item-text-wrap" href="#/app/{{vm.entries[$index].path}}">-->
-					<ion-item nav-clear menu-close class="item-text-wrap" href="#/app/{{vm.entries[$index].path}}">
-						<h2>{{vm.entries[$index].title}}</h2>
+					<ion-item nav-clear menu-close class="item-text-wrap" href="#/app/{{vm.entries[$index].bayCode}}">
+						<h2>{{vm.entries[$index].stationName}}</h2>
 						<!--<h2>{{vm.entries[$index].title}}</h2>-->
 					<!--</a>-->
 					</ion-item>
