Signature created by Eng

--- a/src/main/webapp/app/scripts/home/home.html
+++ b/src/main/webapp/app/scripts/home/home.html
@@ -34,8 +34,14 @@
 			<!--</div>-->
 
 		</div>
+		<div class="item item-text-wrap">
+			<h2> Created by </h2>
+			<a href="http://eng.it" class="item item-icon-left">
+				<img src="http://eng.it/resources/img/eng.png"/>
+			</a>
+		</div>
 
-		<div class="list card">
+		<!--<div class="list card">
 			<a href="tel:{{vm.phoneNumber}}" class="item item-icon-left">
 				<i class="icon ion-ios-telephone"></i>
 				Call us
@@ -55,7 +61,7 @@
 				<i class="icon ion-social-facebook"></i>
 				Visit us on Facebook
 			</a>
-		</div>
+		</div>-->
 
 	</ion-content>
 </ion-view>
