--- a/src/main/webapp/app/scripts/home/home.html
+++ b/src/main/webapp/app/scripts/home/home.html
@@ -1,67 +1,73 @@
 <ion-view view-title="Home">
-	<ion-content>
-		<div class="home-hello">
-			<img src="http://lorempixel.com/1024/768/"/>
-			<div class="item item-text-wrap">
-				<h1>BEinCPPS</h1><h2> by Engineering</h2>
-				<!--50 Market Street, San Francisco, California 94103, United States-->
-			</div>
-		</div>
+    <ion-content>
+        <div class="home-hello">
+            <img src="http://lorempixel.com/1024/768/"/>
+            <div class="item item-text-wrap">
+                <h1>BEinCPPS</h1>
+                <h2> by Engineering</h2>
+                <!--50 Market Street, San Francisco, California 94103, United States-->
+            </div>
+        </div>
 
-		<!--
-		 | http://stackoverflow.com/questions/27239735/ionic-framwork-gridlayout-with-multiple-rows-and-column-on-which-buttons-placed
-		 | http://stackoverflow.com/questions/23779773/angularjs-loops-and-formatting/23780288#23780288
-		 -->
-		<div ng-repeat="e in vm.entries">
-			<div class="row">
-				<div class="card col home">
-					<!--<a class="item item-text-wrap" href="#/app/{{vm.entries[$index].path}}">-->
-					<ion-item nav-clear menu-close class="item-text-wrap" href="#/app/{{vm.entries[$index].bayCode}}">
-						<h2>{{vm.entries[$index].stationName}}</h2>
-						<!--<h2>{{vm.entries[$index].title}}</h2>-->
-					<!--</a>-->
-					</ion-item>
-				</div>
-			</div>
+        <!--
+         | http://stackoverflow.com/questions/27239735/ionic-framwork-gridlayout-with-multiple-rows-and-column-on-which-buttons-placed
+         | http://stackoverflow.com/questions/23779773/angularjs-loops-and-formatting/23780288#23780288
+         -->
+        <div ng-repeat="(stationName,baies) in vm.entries">
+            <div class="row">
+                <div class="card col home">
+                    <!--<a class="item item-text-wrap" href="#/app/{{vm.entries[$index].path}}">-->
+                    <ion-item nav-clear menu-close class="item-text-wrap" href="#/app/{{vm.entries[$index].bayCode}}">
+                        <h2>{{stationName}}</h2>
+                        <div class="card col home">
+                            <div ng-repeat="bay in baies">
+                                <h3>{{bay.ipAddress}}</h3>
+                                <h3>{{bay.bayCode}}</h3>
+                                <h3>{{bay.notification.stateCode}}</h3>
+                            </div>
+                        </div>
+                    </ion-item>
+                </div>
+            </div>
 
-			<!--<div class = "row">-->
-			<!--<div class="card col home">-->
-			<!--<a class="item item-text-wrap" href="#/app/{{vm.entries[$index + 1].path}}">-->
-			<!--<h1><i class="icon {{vm.entries[$index + 1].icon}}"></i></h1>-->
-			<!--<h2>{{vm.entries[$index + 1].title}}</h2>-->
-			<!--</a>-->
-			<!--</div>-->
-			<!--</div>-->
+            <!--<div class="row">-->
+            <!--<div class="card col home">-->
+            <!--<a class="item item-text-wrap" href="#/app/{{vm.entries[$index + 1].path}}">-->
+            <!--<h1><i class="icon {{vm.entries[$index + 1].icon}}"></i></h1>-->
+            <!--<h2>{{vm.entries[$index + 1].title}}</h2>-->
+            <!--</a>-->
+            <!--</div>-->
+            <!--</div>-->
 
-		</div>
-		<div class="item item-text-wrap">
-			<h2> Created by </h2>
-			<a href="http://eng.it" class="item item-icon-left">
-				<img src="http://eng.it/resources/img/eng.png"/>
-			</a>
-		</div>
+        </div>
+        <div class="item item-text-wrap">
+            <h2> Created by </h2>
+            <a href="http://eng.it" class="item item-icon-left">
+                <img src="http://eng.it/resources/img/eng.png"/>
+            </a>
+        </div>
 
-		<!--<div class="list card">
-			<a href="tel:{{vm.phoneNumber}}" class="item item-icon-left">
-				<i class="icon ion-ios-telephone"></i>
-				Call us
-			</a>
+        <!--<div class="list card">
+            <a href="tel:{{vm.phoneNumber}}" class="item item-icon-left">
+                <i class="icon ion-ios-telephone"></i>
+                Call us
+            </a>
 
-			<a class="item item-icon-left" ng-click="vm.sendEmail()">
-				<i class="icon ion-email"></i>
-				Send us and Email
-			</a>
+            <a class="item item-icon-left" ng-click="vm.sendEmail()">
+                <i class="icon ion-email"></i>
+                Send us and Email
+            </a>
 
-			<a href="#" class="item item-icon-left" ng-click="vm.getDirections()">
-				<i class="icon ion-compass"></i>
-				Find us / Get directions
-			</a>
+            <a href="#" class="item item-icon-left" ng-click="vm.getDirections()">
+                <i class="icon ion-compass"></i>
+                Find us / Get directions
+            </a>
 
-			<a ng-click="vm.openFacebookPage()" class="item item-icon-left">
-				<i class="icon ion-social-facebook"></i>
-				Visit us on Facebook
-			</a>
-		</div>-->
+            <a ng-click="vm.openFacebookPage()" class="item item-icon-left">
+                <i class="icon ion-social-facebook"></i>
+                Visit us on Facebook
+            </a>
+        </div>-->
 
-	</ion-content>
+    </ion-content>
 </ion-view>
