--- a/src/main/webapp/app/scripts/home/home.html
+++ b/src/main/webapp/app/scripts/home/home.html
@@ -19,7 +19,7 @@
                     <!--<a class="item item-text-wrap" href="#/app/{{vm.entries[$index].path}}">-->
                     <ion-item nav-clear menu-close class="item-text-wrap" href="#/app/{{vm.entries[$index].bayCode}}">
                         {{stationName}}
-						<ion-buttons ng-repeat="bay in baies" class="buttons">
+						<ion-buttons ng-repeat="bay in baies track by $index" class="buttons">
 								<button ion-button small ng-class={"red-button":bay.stateInfo.stateCode=='124',"yellow-button":bay.stateInfo.stateCode=='125'}>{{bay.stateInfo.stateCode}}</button>
                             <!--<button ion-button small ng-class={bay.stateInfo.stateCode=='124'?"yellow-button":bay.stateInfo.stateCode=='125'?"green-button"}>{{bay.stateInfo.stateCode}}</button>-->
 						</ion-buttons>
