--- a/src/main/webapp/app/scripts/history/history.html
+++ b/src/main/webapp/app/scripts/history/history.html
@@ -1,6 +1,6 @@
 <ion-view view-title="History">
     <ion-content>
-        <ion-list class="list" can-swipe="true" show-delete=”false”>
+        <ion-list class="list" can-swipe="true">
             <ion-item class="item item-divider" ng-repeat="n in notifications">
                 <i class="icon ion-alert-circled"></i>
                 Notification {{n.ackType}} {{n.description}} {{n.stationName}}
