--- a/src/main/webapp/app/scripts/menu/menu.html
+++ b/src/main/webapp/app/scripts/menu/menu.html
@@ -35,7 +35,7 @@
 				<!--<i class="icon ion-ios-arrow-down"></i>-->
 				<!--Notification menu-->
 				<!--<ion-list>-->
-				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/wordpress-articles">
+				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/inbox">
 					<i class="ion-email-unread"></i>
 					Inbox
 				</ion-item>
