--- a/src/main/webapp/app/scripts/menu/menu.html
+++ b/src/main/webapp/app/scripts/menu/menu.html
@@ -1,72 +1,38 @@
 <ion-side-menus enable-menu-with-back-views="false">
-	<ion-side-menu-content
-		edge-drag-threshold="true">
-		<ion-nav-bar class="bar-stable">
-			<ion-nav-back-button>
-			</ion-nav-back-button>
+    <ion-side-menu-content
+            edge-drag-threshold="true">
+        <ion-nav-bar class="bar-stable">
+            <ion-nav-back-button>
+            </ion-nav-back-button>
 
-			<ion-nav-buttons side="left">
-				<button class="button button-icon button-clear ion-android-menu" menu-toggle="left">
-				</button>
-			</ion-nav-buttons>
+            <ion-nav-buttons side="left">
+                <button class="button button-icon button-clear ion-android-menu" menu-toggle="left">
+                </button>
+            </ion-nav-buttons>
 
-mvn		</ion-nav-bar>
-		<ion-nav-view name="menuContent"></ion-nav-view>
-	</ion-side-menu-content>
+        </ion-nav-bar>
+        <ion-nav-view name="menuContent"></ion-nav-view>
+    </ion-side-menu-content>
 
-	<ion-side-menu side="left">
-		<ion-header-bar class="bar-stable">
-			<h1 class="title">Menu</h1>
-		</ion-header-bar>
-		<ion-content>
-			<ion-list>
-				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/home">
-					<i class="icon ion-ios-home"></i>
-					Home
-				</ion-item>
-			</ion-list>
-			<ion-list>
-				<ion-item nav-clear class="item-icon-left">
-					<i class="icon ion-ios-bell"></i>
-					Notification
-				</ion-item>
-			</ion-list>
-			<ion-list>
-				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/popover-menu">-->
-				<!--<i class="icon ion-ios-arrow-down"></i>-->
-				<!--Notification menu-->
-				<!--<ion-list>-->
-				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/inbox">
-					<i class="ion-email-unread"></i>
-					Inbox
-				</ion-item>
-				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/history">
-					<i class="ion-filing"></i>
-					History
-				</ion-item>
-				<!--</ion-list>-->
-				<!--</ion-item>-->
-				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/wordpress-articles">-->
-				<!--<i class="icon ion-social-wordpress"></i>-->
-				<!--Wordpress-->
-				<!--</ion-item>-->
-				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/history">-->
-				<!--<i class="icon ion-android-checkbox-outline"></i>-->
-				<!--Elements-->
-				<!--</ion-item>-->
-				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/native-scrolling">-->
-				<!--<i class="icon ion-ios-list-outline"></i>-->
-				<!--Native scrolling-->
-				<!--</ion-item>-->
-				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/new-slide-box">-->
-				<!--<i class="icon ion-arrow-swap"></i>-->
-				<!--New slide box-->
-				<!--</ion-item>-->
-				<!--<ion-item nav-clear menu-close class="item-icon-left" href="#/app/map">-->
-				<!--<i class="icon ion-map"></i>-->
-				<!--Map-->
-				<!--</ion-item>-->
-			</ion-list>
-		</ion-content>
-	</ion-side-menu>
+    <ion-side-menu side="left">
+        <ion-header-bar class="bar-stable">
+            <h1 class="title">Menu</h1>
+        </ion-header-bar>
+        <ion-content>
+            <ion-list>
+                <ion-item nav-clear menu-close class="item-icon-left" href="#/app/home">
+                    <i class="icon ion-ios-home"></i>
+                    Home
+                </ion-item>
+                <ion-item nav-clear menu-close class="item-icon-left" href="#/app/inbox">
+                    <i class="icon ion-email-unread"></i>
+                    Inbox
+                </ion-item>
+                <ion-item nav-clear menu-close class="item-icon-left" href="#/app/history">
+                    <i class="icon ion-filing"></i>
+                    History
+                </ion-item>
+            </ion-list>
+        </ion-content>
+    </ion-side-menu>
 </ion-side-menus>
