Filter in History page with dropdown menu bugfix - Now is ok with all StationsBays selection

--- a/src/main/webapp/app/scripts/history/history.html
+++ b/src/main/webapp/app/scripts/history/history.html
@@ -11,7 +11,7 @@
                           <select name="filter" id="filter"
                                   ng-model="filter"
                                   ng-options="stationBay.label for stationBay in stationsBays"
-                                  ng-change="show()">
+                                  ng-change="searchByStationBay(filter)">
                           </select>
                       </label>
 
